Fix layout jumps causing by collapsing content heights
This is a recurring issue caused by `height: 100%` in this context means “100% of the height”.

`100vh` is relative to the viewport and forces 100% of its height as the elements min-height.

This wasn’t used before, because the browser support was lackluster back then (tm).

--- a/wcfsetup/install/files/style/layout/layout.scss
+++ b/wcfsetup/install/files/style/layout/layout.scss
@@ -21,7 +21,7 @@ html.disableScrolling {
 html,
 body {
 	font-weight: 400;
-	height: 100%;
+	min-height: 100vh;
 	overflow-x: hidden;
 	width: 100%;
 
@@ -50,8 +50,8 @@ a {
 
 .pageContainer {
 	display: flex;
-	height: 100%;
 	flex-direction: column;
+	min-height: 100vh;
 }
 
 /* <select> fields placed inside a flexbox parent while containing
